[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/objects/BreakableWall.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/Objects/BreakableWall.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 72 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 72 )

[node name="BreakableWall" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
